syntax = "proto3";

option csharp_namespace = "Discount.Grpc";

package discount;

service DiscountProtoService{
	rpc GetDiscount (GetDiscountRequest) returns (CuponModel);
	rpc CreateDiscount (CreateDiscountRequest) returns (CuponModel);
	rpc UpdateDiscount (UpdateDiscountRequest) returns (CuponModel);
	rpc DeleteDiscount (DeleteDiscountRequest) returns (DeleteDiscountResponse);
}

message GetDiscountRequest{
	string productName = 1;
}

message CuponModel{
	int32 id = 1;
	string productName = 2;
	string description = 3;
	int32 amount = 4;
}

message CreateDiscountRequest{
	CuponModel cupon = 1;
}

message UpdateDiscountRequest{
	CuponModel cupon = 1;
}

message DeleteDiscountRequest{
	CuponModel productName = 1;
}

message DeleteDiscountResponse{
	CuponModel success = 1;
}